<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gmail.chernikovich.wow_auctionator.presenter.screen.settings.SettingsViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/RegionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/region"
            app:layout_constraintBottom_toBottomOf="@+id/regionAutoComp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/regionAutoComp" />

        <TextView
            android:id="@+id/RealmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/realm"
            app:layout_constraintBottom_toBottomOf="@+id/realmAutoComp"
            app:layout_constraintStart_toStartOf="@+id/RegionTextView"
            app:layout_constraintTop_toTopOf="@+id/realmAutoComp" />

        <AutoCompleteTextView
            android:id="@+id/regionAutoComp"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/select_region"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/RegionTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/realmAutoComp"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:hint="@string/select_realm"
            app:layout_constraintStart_toStartOf="@+id/regionAutoComp"
            app:layout_constraintTop_toBottomOf="@+id/regionAutoComp" />

        <Button
            android:id="@+id/readyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="8dp"
            android:text="@string/ready"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/realmAutoComp" />
    </android.support.constraint.ConstraintLayout>
</layout>