<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gmail.chernikovich.wow_auctionator.presenter.screen.settings.general.GeneralSettingsViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/realmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/realm"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/regionTextView"
            app:layout_constraintTop_toBottomOf="@+id/regionTextView" />

        <TextView
            android:id="@+id/regionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/region"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/realmAutoCom"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/realm"
            app:layout_constraintBottom_toBottomOf="@+id/realmTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/realmTextView"
            app:layout_constraintTop_toTopOf="@+id/realmTextView"
            app:layout_constraintVertical_bias="0.526" />

        <AutoCompleteTextView
            android:id="@+id/regionAutoCom"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/region"
            app:layout_constraintBottom_toBottomOf="@+id/regionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/regionTextView" />

        <AutoCompleteTextView
            android:id="@+id/languageAutoCom"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/language"
            app:layout_constraintBottom_toBottomOf="@+id/languageTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/realmAutoCom"
            app:layout_constraintTop_toTopOf="@+id/languageTextView" />

        <TextView
            android:id="@+id/languageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/language"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/realmTextView"
            app:layout_constraintTop_toBottomOf="@+id/realmTextView" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:text="set"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>